--- a/Puppy-Pals/src/index.css
+++ b/Puppy-Pals/src/index.css
@@ -4,8 +4,9 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(143, 16, 16, 0.87);
+  background-color: #dfcdcd;
+  font-size: 20px;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
